--- a/src/auth/composer.json
+++ b/src/auth/composer.json
@@ -7,14 +7,15 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "infyomlabs/adminlte-templates": "5.6.x-dev",
+        "infyomlabs/laravel-generator": "5.6.x-dev",
+        "infyomlabs/swagger-generator": "dev-master",
+        "jlapp/swaggervel": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "1.0.*",
-        "infyomlabs/laravel-generator": "5.6.x-dev",
         "laravelcollective/html": "^5.6.0",
-        "infyomlabs/adminlte-templates": "5.6.x-dev",
-        "infyomlabs/swagger-generator": "dev-master",
-        "jlapp/swaggervel": "dev-master"
+        "santigarcor/laratrust": "5.0.*",
+        "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
