--- a/src/laravel/.env.local
+++ b/src/laravel/.env.local
@@ -18,8 +18,9 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+QUEUE_HOST=beanstalkd
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
